objects/ContentVersion.object
<CustomObject>
    <fields>
        <fullName>Customer__c</fullName>
        <inlineHelpText>Who is going to be using or receiving the output of work. Can be internal or external. There can also be multiple customers in some cases. Example, the customers for the Construction Plan Sets would probably be SS, PM, and Subs...</inlineHelpText>
        <label>Customer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Divisions__c</fullName>
        <inlineHelpText>What department(s) does this standard apply to.</inlineHelpText>
        <label>Divisions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Company Wide</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Marketing/Sales Ops</fullName>
                </value>
                <value>
                    <fullName>O&amp;M</fullName>
                </value>
                <value>
                    <fullName>Procurement</fullName>
                </value>
                <value>
                    <fullName>Project Finance</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expected_Hard_Costs_Year__c</fullName>
        <inlineHelpText>Any EXTERNAL costs associated with executing the work. This would include vendors, subcontracts, or materials. Don&apos;t include costs for Borrego personnel. That is covered in the Process Time and Lead Time. If there are no external costs please enter &quot;0&quot;.</inlineHelpText>
        <label>Expected Hard Costs ($/Year)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Lead_Time_days__c</fullName>
        <inlineHelpText>Lead Time is the calendar time (clock time) that transpires from the time the work starts to the time is it is complete. Lead Time = Process Time + Time Work Sits Untouched (wait time/desk time.)</inlineHelpText>
        <label>Expected Lead Time (days)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Process_Time_hours__c</fullName>
        <inlineHelpText>Process Time is the man hours actually required to do work. Please input the Process Time we expect this process to take for all involved in doing the work.</inlineHelpText>
        <label>Expected Process Time (hours)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Feedback_Continous_Improvement__c</fullName>
        <inlineHelpText>Describe how feedback and continuous improvement is built into process or how the owner will manage standard for continuous improvement.</inlineHelpText>
        <label>Feedback/Continous Improvement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Field_Image_URL__c</fullName>
        <description>for Conga</description>
        <formula>LEFT( $Api.Enterprise_Server_URL_100, FIND( &quot;.com&quot;, $Api.Enterprise_Server_URL_100 ) + 4)&amp; &quot;sfc/servlet.shepherd/version/renditionDownload?rendition=THUMB720BY480&amp;versionId=&quot; &amp; Id &amp; &quot;&amp;operationContext=CHATTER&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Field Image URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_del__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if for internal use only</description>
        <inlineHelpText>Check if this document is for internal use only- DO NOT DISTRIBUTE</inlineHelpText>
        <label>Internal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEXMAGICMOVER__LegacyNoteConvertedDate__c</fullName>
        <description>The created Date of the Legacy Note Converted</description>
        <label>LegacyNoteConvertedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LEXMAGICMOVER__LegacyNoteConvertedId__c</fullName>
        <label>LegacyNoteConvertedId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEXMAGICMOVER__LegacyNoteConvertedLastModifiedDate__c</fullName>
        <label>LegacyNoteConvertedLastModifiedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LEXMAGICMOVER__LegacyNoteConvertedOwnerId__c</fullName>
        <label>LegacyNoteConvertedOwnerId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEXMAGICMOVER__LegacyNoteConvertedParentId__c</fullName>
        <label>LegacyNoteConvertedParentId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The person in the company who owns this Standard. This will generally be the person who is managing those doing the work.</inlineHelpText>
        <label>Owner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.ProfileId</field>
                <operation>notEqual</operation>
                <value>00e800000018oTn</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Content_Versions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Regions__c</fullName>
        <inlineHelpText>What region(s) does this standard apply to</inlineHelpText>
        <label>Regions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Company Wide</fullName>
                </value>
                <value>
                    <fullName>New England</fullName>
                </value>
                <value>
                    <fullName>New York</fullName>
                </value>
                <value>
                    <fullName>Northern California</fullName>
                </value>
                <value>
                    <fullName>Southern California</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SF_Admin__c</fullName>
        <description>test field to check file exists</description>
        <label>SF Admin</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_Streams__c</fullName>
        <inlineHelpText>Which Value Stream Maps (see VSM files in salesforce) does this Standard apply to.</inlineHelpText>
        <label>Value Streams</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>National Onsite PPA</fullName>
                </value>
                <value>
                    <fullName>National Onsite EPC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <recordTypes>
        <fullName>Standard_WorkSOP</fullName>
        <active>true</active>
        <description>SOP/For processes such as Standard Work or Standard Operating Procedures.</description>
        <label>Standard Work/SOP</label>
    </recordTypes>
    <recordTypes>
        <fullName>Training</fullName>
        <active>true</active>
        <description>For use with Management Training Library</description>
        <label>Training</label>
    </recordTypes>
    <recordTypes>
        <fullName>WorkProduct_Tool_DesignStandard</fullName>
        <active>true</active>
        <description>For documenting standards that are not Processes or SOPs. Examples would include: Standard Products, Templates, Policies, Design Tools, Checklists, Inspection Requirements,....</description>
        <label>Non-SOP Standard</label>
    </recordTypes>
    <validationRules>
        <fullName>Description_Required</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK(Description )</errorConditionFormula>
        <errorDisplayField>Description</errorDisplayField>
        <errorMessage>Please Enter a Description of the Content</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>General_Record_Type_Not_available</fullName>
        <active>false</active>
        <errorConditionFormula>AND(RecordType.Id   &lt;&gt; &quot;01234000000GGcg&quot;,
RecordType.Id   &lt;&gt; &quot;01234000000GGcb&quot;,
RecordType.Id   &lt;&gt; &quot;01234000000UQGG&quot;
 )</errorConditionFormula>
        <errorMessage>You have selected an invalid record type.  Please select either Standard Work/SOP or Work Product/Tools/Design Standards.</errorMessage>
    </validationRules>
</CustomObject>